new head2 added

--- a/page1.html
+++ b/page1.html
@@ -11,6 +11,7 @@
 
 <body>
 <h1 class="center">This heading will not be affected</h1>
+<h2>Added this code HTML file via Github<h2>
 <p class="center">This paragraph will be red and center-aligned.</p> 
 <h1>Hello this the first web page hadding 1</h1>
 <h2>Hello this the first web page hadding 2</h2>
