page1.html is added with some code

--- a/page1.html
+++ b/page1.html
@@ -18,6 +18,7 @@
 <h3>Hello this the first web page hadding 3</h3>
 <h4>Hello this the first web page hadding 4</h4>
 <p>CSS is a language that describes the style of an HTML document.
+<h6> Added code</h6>
 
 CSS describes how HTML elements should be displayed.
 
